--- a/src/Components/OfferCard/OfferCard.module.scss
+++ b/src/Components/OfferCard/OfferCard.module.scss
@@ -1,7 +1,6 @@
 .card{
     background-color: white;
-    height: 350px;
-    gap: 15px;
+    height: 435px;
     border-radius: 7px;
     cursor: pointer;
 
@@ -15,8 +14,8 @@
         height: 30px;
         display: flex;
         align-items: center;
-        padding-left: 10px;
-        padding-right: 10px;
+        padding-left: 15px;
+        padding-right: 15px;
         justify-content: space-between;
     }
     .imageContainer{
@@ -35,16 +34,39 @@
     }
 
     .mainInfo{
+        padding: 0px 15px 15px 15px;
+        height: 300px;
         .title{
-            padding: 15px 10px 15px 10px;
+            padding: 15px 0px 10px 0px;
             font-size: 22px;
         }
 
         .line{
             height: 1px;
             background-color: rgb(215, 215, 215);
-            width: 85%;
             margin: 0 auto;
+            margin-bottom: 10px;
+        }
+
+        .basicInfo{
+            font-weight: 600;
+            margin-bottom: 100px;
+        }
+
+        .description{
+            margin-top: 10px;
+            display: -webkit-box;
+            max-width: 100%;
+            -webkit-line-clamp: 4;
+            -webkit-box-orient: vertical;
+            overflow: hidden;
+        }
+
+        .publisherData{
+            position: relative;
+            bottom: 5px;
+            margin-top: 5px;
+            font-weight: 600;
         }
     }
 }
