--- a/src/index.scss
+++ b/src/index.scss
@@ -3,3 +3,7 @@
     padding: 0;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
+
+body {
+    background-color: rgb(230, 228, 228);
+}
