--- a/src/Components/Filter/Filters.module.scss
+++ b/src/Components/Filter/Filters.module.scss
@@ -1,1 +1,11 @@
+.filters{
+    padding-top: 20px;
+    padding-bottom: 20px;
 
+    .chip{
+        margin-right: 10px;
+        margin-bottom: 10px;
+
+        font-size: 16px;
+    }
+}
