--- a/src/Screens/HomePage/HomePage.module.scss
+++ b/src/Screens/HomePage/HomePage.module.scss
@@ -1,11 +1,12 @@
 .homePageWrapper{
-    padding: 20px;
+    padding-left: 20px;
+    padding-right: 20px;
 
     .prevSearches{
         text-align: center;
-        padding-top: 20px;
-        padding-bottom: 20px;
-        border-bottom: 1px solid gray;
+        padding-top: 18px;
+        padding-bottom: 18px;
+        border-bottom: 1px solid rgb(194, 194, 194);
         font-size: 19px;
         color: rgb(37, 37, 37);
     }
