--- a/src/Screens/HomePage/HomePage.module.scss
+++ b/src/Screens/HomePage/HomePage.module.scss
@@ -3,12 +3,19 @@
     padding-right: 20px;
 
     .prevSearches{
+        display: flex;
+        justify-content: center;
         text-align: center;
         padding-top: 18px;
         padding-bottom: 18px;
         border-bottom: 1px solid rgb(194, 194, 194);
         font-size: 19px;
         color: rgb(37, 37, 37);
+
+        .historyIcon{
+            color: gray;
+            margin-right: 10px;
+        }
     }
     
     .cards{
