--- a/src/Components/Filter/Filters.module.scss
+++ b/src/Components/Filter/Filters.module.scss
@@ -5,7 +5,7 @@
     .chip{
         margin-right: 10px;
         margin-bottom: 10px;
-
+        cursor: pointer;
         font-size: 16px;
     }
 }
